--- a/Resturentmenu.html
+++ b/Resturentmenu.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-        <h1>M.S.A Resturent Menu</h1>
+        <h1>M.S Resturent Menu</h1>
         <ol>
            <li>
             <h2>Pakistani Dishes</h2>
